[package]
name = "dsrs_kll"
version = "0.1.0"
authors = ["Jingyang Fu <homeffjy@gmail.com>"]
edition = "2024"
description = "KLL quantiles sketch from Apache DataSketches for Rust"
homepage = "https://github.com/homeffjy/dsrs_kll"
repository = "https://github.com/homeffjy/dsrs_kll"
readme = "README.md"
keywords = ["sketch", "kll", "quantiles", "streaming", "percentiles"]
categories = ["algorithms", "mathematics", "command-line-utilities"]
license = "Apache-2.0"

[dependencies]
libdatasketches_sys = { path = "libdatasketches_sys" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
base64 = "0.22.1"

[dev-dependencies]
rand = "0.9.2"

[workspace]
members = ["libdatasketches_sys"]
