[package]
name = "kll-rs"
version = "0.1.0"
edition = "2021"
authors = ["Jingyang Fu <homeffjy@gmail.com>"]
description = "KLL quantiles sketch from Apache DataSketches for Rust"
homepage = "https://github.com/homeffjy/kll-rs"
repository = "https://github.com/homeffjy/kll-rs"
readme = "README.md"
keywords = ["sketch", "kll", "quantiles", "streaming", "percentiles"]
categories = ["algorithms", "mathematics", "command-line-utilities"]
license = "Apache-2.0"

[dependencies]
libdatasketches_sys = { path = "libdatasketches_sys", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
base64 = "0.22.1"

[dev-dependencies]
rand = "0.9.2"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "kll_double_benchmark"
harness = false

[workspace]
members = ["libdatasketches_sys"]
