[package]
name = "libdatasketches_sys"
version = "0.1.0"
authors = ["Jingyang Fu <homeffjy@gmail.com>"]
edition = "2024"
build = "build.rs"
links = "datasketches"
license = "Apache-2.0"
description = "Low-level bindings for Apache DataSketches C++ library"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0.3"
cmake = "0.1"
bindgen = { version = "0.65", default-features = false, features = ["runtime"] }

[features]
default = []
static = []
